# sol-lootbox-program

./: .gitignore  LICENCE  README.md  console.sh  mint.json  package-lock.json  package.json  tsconfig.json  verify.sh
.github/workflows/: rust.yml
program/: Cargo.toml  build.sh  deploy.sh
program/src/: error.rs  instruction.rs  lib.rs  nft.rs  state.rs  ticket.rs  verify.rs
program/src/processors/: admin_withdraw.rs  buy.rs  initialize.rs  migrate.rs  mod.rs  obtain.rs  update_state.rs  withdraw.rs
src/: client.js  client.ts  instruction.ts  parameters.ts  profile.ts  secrets.ts  state.ts  ticket.ts
src/commands/: admin-withdraw.ts  buy.ts  console.ts  create-ata.ts  create-token.ts  get-state.ts  init.ts  list-alt.ts  migrate.ts  mint-nft.ts  mint-tokens.ts  new-admin.ts  new-key.ts  obtain.ts  transfer.ts  unpack-tx.ts  update-price.ts  update-state.ts  withdraw.ts
src/utils/: getNftPdaInfo.ts
